# deberg

./: .gitignore  .travis.yml  CMakeLists.txt  LICENCE.txt  README.md  bb_point_filter.hpp  deberg.cpp  deberg.hpp  deberg_cli.cpp  deberg_options.hpp  geometry.hpp  gml_check.hpp  graph_util.hpp  line.hpp  line_reader.hpp  line_writer.hpp  lines_to_geojson.py  map_simplification.hpp  monotone_decomposition.cpp  monotone_decomposition.hpp  point.hpp  point_distributor.cpp  point_distributor.hpp  point_reader.hpp  poly_line.hpp  shortcut.hpp  shortcut_acceptor.cpp  shortcut_acceptor.hpp  static_graph.hpp  static_permutation_queue.hpp  sweepline_state.cpp  sweepline_state.hpp  tangent_splitter.cpp  tangent_splitter.hpp  timing_util.hpp  topo_sort.hpp  util.hpp
data/: lines1.txt  lines2.txt  points1.txt  points2.txt
docker/: Dockerfile  Makefile  test.sh
tests/: deberg_tests.cpp  geometry_tests.cpp  graph_util_tests.cpp  map_simplification_tests.cpp  monotone_decomposition_tests.cpp  point_distributor_tests.cpp  point_filter_tests.cpp  reader_test.cpp  shortcut_acceptor_tests.cpp  static_graph_tests.cpp  static_permutation_queue_tests.cpp  sweepline_tests.cpp  tangent_splitter_tests.cpp  test_utils.hpp  tests.cpp  util_tests.cpp  writer_tests.cpp
utils/: data_to_geojson.py  graphml_parser.py  lines_to_geojson.py  points_to_geojson.py
